# coffee-supply-optimization-system

./: .gitignore  Makefile  README.md  docker-compose.yml  swagger.yaml
.github/workflows/: backend-ci.yml
coffee_manager/: Dockerfile  pyproject.toml  seed_orders.sql
coffee_manager/database/: schema.sql  seed.sql
coffee_manager/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
coffee_manager/frontend/database/: seed.sql
coffee_manager/frontend/src/: App.tsx
coffee_manager/frontend/src/api/: api.ts  client.ts
coffee_manager/frontend/src/components/: Layout.tsx  Modal.tsx
coffee_manager/frontend/src/context/: ThemeContext.tsx
coffee_manager/frontend/src/data/: mock.ts
coffee_manager/frontend/src/pages/: Buildings.tsx  Dashboard.tsx  DistributorLogin.tsx  DistributorPanel.tsx  Distributors.tsx  Login.tsx  Optimization.tsx  Orders.tsx
coffee_manager/frontend/src/utils/: distributorPanelMapper.test.ts  distributorPanelMapper.ts
coffee_manager/scripts/: create_admin.py
coffee_manager/src/coffee_manager/: auth.py  config.py  database.py  main.py  models.py  schemas.py
coffee_manager/src/coffee_manager/routers/: api_keys.py  auth.py  buildings.py  distributors.py  inventory.py  optimization.py  orders.py
coffee_manager/tests/: conftest.py  test_api_keys.py  test_auth_helpers.py  test_auth_routes.py  test_buildings.py  test_distributors.py  test_health.py  test_inventory.py  test_optimization.py  test_orders.py  test_schemas.py
coffee_optimizer/: Dockerfile  pyproject.toml
coffee_optimizer/src/coffee_optimizer/: correction_optimizer.py  main.py  models.py  optimizer.py
coffee_optimizer/tests/: test_main.py  test_optimizer.py
docs/: README.md  api.md  architecture.md  infrastructure.md  workflows.md
docs/diagrams/: architecture.drawio  class-diagram.drawio  component-diagram.drawio  deployment-diagram.drawio  logical-data-model.drawio  optimization-workflow.drawio  (+1 more)
