[project]
name = "coffee-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "pgierzat",email = "01187225@pw.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "amplpy (>=0.16.0,<0.17.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bcrypt (<4.1)"
]

[tool.poetry]
packages = [{include = "coffee_manager", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=8.3.0,<9.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
