[project]
name = "coffee-optimizer"
version = "0.1.0"
description = ""
authors = [
    {name = "pgierzat",email = "01187225@pw.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "amplpy (>=0.16.0,<0.17.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "coffee_optimizer", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
